--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="/img/favicon.png" rel="icon">
-    <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="img/favicon.png" rel="icon">
+    <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -25,7 +25,7 @@
     <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Main CSS File -->
-    <link href="/css/main.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
 </head>
 
@@ -35,7 +35,7 @@
         <i class="header-toggle d-xl-none bi bi-list"></i>
 
         <div class="profile-img">
-            <img src="/img/Sedzani.jpg" alt="" class="img-fluid rounded-circle">
+            <img src="img/Sedzani.jpg" alt="" class="img-fluid rounded-circle">
         </div>
 
         <a href="index.html" class="logo d-flex align-items-center justify-content-center">
@@ -69,7 +69,7 @@
         <!-- Hero Section -->
         <section id="hero" class="hero section dark-background">
 
-            <img src="/img/Sedzman.jpg" alt="" data-aos="fade-in" class="">
+            <img src="img/Sedzman.jpg" alt="" data-aos="fade-in" class="">
              
             <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <h2>Sedz Muthivhi</h2>
@@ -98,7 +98,7 @@
 
                 <div class="row gy-4 justify-content-center">
                     <div class="col-lg-4">
-                        <img src="/img/SedzFullBody.jpg" class="img-fluid" alt="">
+                        <img src="img/SedzFullBody.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 content">
                         <h2>UI/UX Designer; Software Developer.</h2>
