--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
         <div class="social-links text-center">
            
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100092521097710" class="facebook"><i class="bi bi-facebook"></i></a>
             <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/sedzani-muthivhi-0a4993244/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
 
         <nav id="navmenu" class="navmenu">
