--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="social-links text-center">
            
             <a href="https://www.facebook.com/profile.php?id=100092521097710" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.instagram.com/prayboii_sedz/" class="instagram"><i class="bi bi-instagram"></i></a>
             <a href="https://www.linkedin.com/in/sedzani-muthivhi-0a4993244/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
 
@@ -56,7 +56,6 @@
                 <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
                 <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
                 <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-                <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
                 <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
                 <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
             </ul>
