--- a/index.html
+++ b/index.html
@@ -359,6 +359,79 @@
             </div>
 
         </section><!-- /Resume Section -->
+         <!-- Services Section -->
+        <section id="services" class="services section">
+
+            <!-- Section Title -->
+            <div class="container section-title" data-aos="fade-up">
+                <h2>Services</h2>
+                <p>As a dedicated and results-driven professional, I offer a comprehensive range of services in software development and project management. My expertise spans coding, bug fixing, and technical support, as well as project planning, coordination, and risk management. Below is a detailed list of the key services I provide to help drive successful software projects and deliver high-quality solutions.</p>
+            </div><!-- End Section Title -->
+
+            <div class="container">
+
+                <div class="row gy-4">
+
+                    <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
+                        <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
+                        <div>
+                            <h4 class="title"><a href="service-details.html" class="stretched-link">Technical Support and Maintenance</a></h4>
+                            <p class="description">Providing technical support to end-users and stakeholders and
+Performing regular maintenance and updates to ensure the smooth operation of applications.</p>
+                        </div>
+                    </div>
+                    <!-- End Service Item -->
+
+                    <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
+                        <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
+                        <div>
+                            <h4 class="title"><a href="service-details.html" class="stretched-link">Coding and Implementation</a></h4>
+                            <p class="description">Developing and maintaining software applications by writing clean and efficient code,
+Implementing new features and functionalities based on project requirements.</p>
+                        </div>
+                    </div><!-- End Service Item -->
+
+                    <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
+                        <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
+                        <div>
+                            <h4 class="title"><a href="service-details.html" class="stretched-link">Bug fixing and Troubleshooting</a></h4>
+                            <p class="description">Identifying, diagnosing, and resolving software bugs and issues,
+Conducting root cause analysis and implementing effective solutions.</p>
+                        </div>
+                    </div><!-- End Service Item -->
+
+                    <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
+                        <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
+                        <div>
+                            <h4 class="title"><a href="service-details.html" class="stretched-link">Unit Testing and Quality Assurance</a></h4>
+                            <p class="description">Creating and executing unit tests to ensure code quality and reliability,
+Participating in code reviews and adhering to coding standards and best practices.</p>
+                        </div>
+                    </div><!-- End Service Item -->
+
+                    <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
+                        <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
+                        <div>
+                            <h4 class="title"><a href="service-details.html" class="stretched-link">Project Planning and Coordination</a></h4>
+                            <p class="description">Assisting in the development of project plans, timelines, and milestones,
+Coordinating tasks and resources to ensure project goals are met on time.</p>
+                        </div>
+                    </div><!-- End Service Item -->
+
+                    <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
+                        <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
+                        <div>
+                            <h4 class="title"><a href="service-details.html" class="stretched-link">Reporting and Documentation</a></h4>
+                            <p class="description">Preparing and presenting project status reports to stakeholders,
+Maintaining project documentation, including plans, reports, and meeting notes.</p>
+                        </div>
+                    </div><!-- End Service Item -->
+
+                </div>
+
+            </div>
+
+        </section><!-- /Services Section -->
        </section><!-- /Services Section -->
       
         <!-- Contact Section -->
