--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- Hero Section -->
         <section id="hero" class="hero section dark-background">
 
-            <img src="img/Sedz_ProfileIcon.jpg" alt="" data-aos="fade-in" class="">
+            <img src="img/DMan.jpg" alt="" data-aos="fade-in" class="">
              
             <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <h2>Sedz Muthivhi</h2>
