--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                 <div class="row gy-4 justify-content-center">
                     <div class="col-lg-4">
-                        <img src="img/SedzFullBody.jpg" class="img-fluid" alt="">
+                        <img src="img/Animal.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 content">
                         <h2>UI/UX Designer; Software Developer.</h2>
